Nuke messy history, initial working version